--- a/furbaby/requirements.txt
+++ b/furbaby/requirements.txt
@@ -1,5 +1,23 @@
 asgiref==3.7.2
+astroid==2.15.8
+black==23.9.1
+click==8.1.7
+dill==0.3.7
 Django==4.0
 django-heartbeat==2.2.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==3.11.0
 psutil==5.9.5
+psycopg==3.1.12
+pylint==2.17.7
+pylint-django==2.5.3
+pylint-plugin-utils==0.8.2
 sqlparse==0.4.4
+tomlkit==0.12.1
+typing_extensions==4.8.0
+wrapt==1.15.0
