--- a/furbaby/requirements.txt
+++ b/furbaby/requirements.txt
@@ -14,6 +14,7 @@ pathspec==0.11.2
 platformdirs==3.11.0
 psutil==5.9.5
 psycopg==3.1.12
+psycopg2-binary==2.9.9
 pylint==2.17.7
 pylint-django==2.5.3
 pylint-plugin-utils==0.8.2
