--- a/furbaby/requirements.txt
+++ b/furbaby/requirements.txt
@@ -18,6 +18,7 @@ psycopg2-binary==2.9.9
 pylint==2.17.7
 pylint-django==2.5.3
 pylint-plugin-utils==0.8.2
+python-dotenv==1.0.0
 sqlparse==0.4.4
 tomlkit==0.12.1
 typing_extensions==4.8.0
