--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "6.1.0",
     "react-router-dom": "6.16.0",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@tailwindcss/forms": "0.5.6",
+    "@types/react-helmet": "6.1.7",
     "tailwindcss": "3.3.3"
   }
 }
