fix missing AWS_RDS_DATABASE_PASSWORD in django-unit-tests.yml

--- a/.github/workflows/django-unit-tests.yml
+++ b/.github/workflows/django-unit-tests.yml
@@ -28,4 +28,5 @@ jobs:
     - name: Run Tests
       run: |
         cd furbaby
+        export AWS_RDS_DATABASE_PASSWORD="dummy-password"
         python manage.py test
