update test run file with new env var

--- a/.github/workflows/django-unit-tests.yml
+++ b/.github/workflows/django-unit-tests.yml
@@ -29,4 +29,5 @@ jobs:
       run: |
         cd furbaby
         export AWS_RDS_DATABASE_PASSWORD="dummy-password"
+        export DJANGO_SECRET_KEY="dummy-secret-key"
         python manage.py test
