--- a/furbaby/requirements.txt
+++ b/furbaby/requirements.txt
@@ -12,6 +12,7 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
+pgsanity==0.2.9
 platformdirs==3.11.0
 psutil==5.9.5
 psycopg==3.1.12
