--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fix": "eslint --fix src/**/*.{ts,tsx}",
-    "format": "prettier --write . --config ./.prettierrc.json"
+    "format": "prettier --write . --config ./.prettierrc.json",
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "eslintConfig": {
     "extends": [
@@ -55,15 +56,23 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@tailwindcss/forms": "0.5.6",
     "@types/react-helmet": "6.1.7",
-    "prettier": "3.0.3",
-    "tailwindcss": "3.3.3",
     "@typescript-eslint/eslint-plugin": "5.10.2",
-    "eslint-plugin-simple-import-sort": "7.0.0",
-    "eslint-plugin-react": "7.28.0",
     "@typescript-eslint/parser": "5.10.2",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "5.0.0"
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.0.2",
+    "prettier": "3.0.3",
+    "tailwindcss": "3.3.3"
+  },
+  "lint-staged": {
+    "*.{js, ts, tsx}": [
+      "prettier --write . --config ./.prettierrc.json",
+      "eslint --fix src/**/*.{ts,tsx}"
+    ]
   }
 }
