--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.0.18",
+    "@microlink/react-json-view": "1.23.0",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -11,18 +13,26 @@
     "@types/node": "16.18.58",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
+    "axios": "1.5.1",
     "react": "18.2.0",
+    "react-cookie": "6.1.1",
     "react-dom": "18.2.0",
+    "react-helmet": "6.1.0",
+    "react-hot-toast": "2.4.1",
     "react-router-dom": "6.16.0",
     "react-scripts": "5.0.1",
-    "typescript": "4.9.5",
+    "typescript": "4.5.4",
     "web-vitals": "2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "ESLINT_NO_DEV_ERRORS=true react-scripts start",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "test": "ESLINT_NO_DEV_ERRORS=true react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "lint:fix": "eslint --fix src/**/*.{ts,tsx}",
+    "format": "prettier --write . --config ./.prettierrc.json",
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +50,29 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@tailwindcss/forms": "0.5.6",
+    "@types/react-helmet": "6.1.7",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "eslint": "8.8.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.0.2",
+    "prettier": "3.0.3",
+    "tailwindcss": "3.3.3"
+  },
+  "lint-staged": {
+    "*.{js, ts, tsx}": [
+      "prettier --write . --config ./.prettierrc.json",
+      "eslint --fix src/**/*.{ts,tsx}"
     ]
   }
 }
