--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@heroicons/react": "2.0.18",
+    "@js-smart/react-cookie-service": "^2.3.0",
     "@microlink/react-json-view": "1.23.0",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
@@ -15,7 +16,6 @@
     "@types/react-dom": "18.2.13",
     "axios": "1.5.1",
     "react": "18.2.0",
-    "react-cookie": "6.1.1",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-hot-toast": "2.4.1",
