--- a/furbaby/requirements.txt
+++ b/furbaby/requirements.txt
@@ -10,6 +10,7 @@ blessed==1.20.0
 botocore==1.31.64
 cement==2.8.2
 certifi==2023.7.22
+cfgv==3.4.0
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.3
@@ -29,6 +30,8 @@ exceptiongroup==1.1.3
 fastjsonschema==2.16.2
 filelock==3.12.4
 flake8==5.0.4
+gitdb==4.0.11
+identify==2.5.30
 idna==3.4
 importlib-metadata==6.0.0
 importlib-resources==5.10.2
@@ -48,6 +51,7 @@ mypy-extensions==1.0.0
 nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.3
+nodeenv==1.8.0
 packaging==23.2
 pandocfilters==1.5.0
 pathspec==0.10.1
@@ -75,6 +79,7 @@ pyzmq==25.0.0
 requests==2.31.0
 semantic-version==2.8.5
 six==1.16.0
+smmap==5.0.1
 soupsieve==2.4
 sqlparse==0.4.4
 termcolor==1.1.0
