--- a/furbaby/.ebextensions/db-migrate.config
+++ b/furbaby/.ebextensions/db-migrate.config
@@ -1,6 +1,6 @@
 container_commands:
   01_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --database=default --settings=furbaby.settings"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --database=ebdb --settings=furbaby.settings"
     leader_only: true
 option_settings:
   aws:elasticbeanstalk:application:environment:
