--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "axios": "1.5.1",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@tailwindcss/forms": "0.5.6",
+    "@types/lodash": "4.14.200",
     "@types/react-helmet": "6.1.7",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
