--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ jobs:
         secret_access_key: $AWS_ACCESS_SECRET_KEY
         region: "us-east-1"
         app: "project-team-1-furbaby"
-        env: "furbaby-develop-d"
+        env: "develop-furbaby"
         bucket_name: "elasticbeanstalk-us-east-1-994011800090"
         on:
           # branch: develop
