comment out all parts of dpl v2 parts of code

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,30 +30,30 @@ jobs:
 
     deploy:
       - provider: elasticbeanstalk
-        edge: true
-        cleanup: false
+        # edge: true
+        # cleanup: false
         access_key_id: $AWS_ACCESS_KEY_ID
         secret_access_key: $AWS_ACCESS_SECRET_KEY
         region: "us-east-1"
         app: "project-team-1-furbaby"
         env: "develop-furbaby"
         bucket_name: "elasticbeanstalk-us-east-1-994011800090"
-        wait_until_deployed: true
-        wait_until_deployed_timeout: 1200
+        # wait_until_deployed: true
+        # wait_until_deployed_timeout: 1200
         on:
           # branch: develop
           all_branches: true
 
       - provider: elasticbeanstalk
-        edge: true
+        # edge: true
         access_key_id: $AWS_ACCESS_KEY_ID
         secret_access_key: $AWS_ACCESS_SECRET_KEY
-        cleanup: false
+        # cleanup: false
         region: "us-east-1"
         app: "project-team-1-furbaby"
         env: "furbaby-master"
         bucket_name: "elasticbeanstalk-us-east-1-994011800090"
-        wait_until_deployed: true
-        wait_until_deployed_timeout: 1200
+        # wait_until_deployed: true
+        # wait_until_deployed_timeout: 1200
         on:
           branch: master
