explicit decleration of settings file in migrate command in travis ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
       - echo $GIT_COMMIT_SHORT_HASH
 
     before_script:
-      - python manage.py migrate
+      - python manage.py migrate --settings=furbaby.settings
 
     script:
       - printenv > ./furbaby/.env
