--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ jobs:
       - echo $GIT_COMMIT_SHORT_HASH
 
     before_script:
+      - pythong manage.py makemigrations --settings=furbaby.settings
       - python manage.py migrate --settings=furbaby.settings
 
     script:
