ci: fix settings.py for deployment (#71)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 os: linux
+dist: focal
 
 python:
   - 3.8
@@ -14,9 +15,14 @@ jobs:
       - echo $GIT_COMMIT_SHORT_HASH
 
     before_script:
-      - python manage.py migrate
+      - python manage.py makemigrations --settings=furbaby.settings
+      - python manage.py migrate --settings=furbaby.settings
 
     script:
+      - printenv > ./furbaby/.env
+      - ls -lah ./furbaby
+      - git add .
+      - git commit -m "add latest .env file"
       - black --check .
       - pylint **/*.py --exit-zero
       - coverage run --source=api manage.py test
@@ -28,10 +34,11 @@ jobs:
       - provider: elasticbeanstalk
         access_key_id: $AWS_ACCESS_KEY_ID
         secret_access_key: $AWS_ACCESS_SECRET_KEY
+        skip_cleanup: true
         region: "us-east-1"
         app: "project-team-1-furbaby"
-        env: "furbaby-prod-pr"
-        bucket_name: "elasticbeanstalk-us-east-1-994011800090"
+        env: "staging"
+        bucket: "elasticbeanstalk-us-east-1-994011800090"
         on:
           branch: develop
 
@@ -40,7 +47,8 @@ jobs:
         secret_access_key: $AWS_ACCESS_SECRET_KEY
         region: "us-east-1"
         app: "project-team-1-furbaby"
-        env: "furbaby-prod-pr-new"
-        bucket_name: "elasticbeanstalk-us-east-1-994011800090"
+        env: "production"
+        bucket: "elasticbeanstalk-us-east-1-994011800090"
+        skip_cleanup: true
         on:
           branch: master
