chore: make master in line with develop (#69)

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,12 @@
 **/.elasticbeanstalk/*
 **/__pycache__/**
 
-**/*.env
+**/*.eb_env
+
+**/*.DS_STORE
+
+**/.vercel
+
+**/.coveralls.yml
+
+**/*.coverage
