--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,10 +55,12 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@tailwindcss/forms": "0.5.6",
+    "@tailwindcss/typography": "0.5.10",
     "@types/lodash": "4.14.200",
     "@types/react-helmet": "6.1.7",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
+    "daisyui": "3.9.4",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.4",
