--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,8 @@ jobs:
       - export GIT_COMMIT_HASH=$(git rev-parse HEAD)
       - echo $GIT_COMMIT_HASH
       - echo $GIT_COMMIT_SHORT_HASH
-
-    before_script:
-      - python manage.py makemigrations --settings=furbaby.settings
-      - python manage.py migrate --settings=furbaby.settings
+      - export AWS_SECRET_ACCESS_KEY="$AWS_ACCESS_SECRET_KEY"
+      - export AWS_BUCKET_NAME="elasticbeanstalk-us-east-1-994011800090"
 
     script:
       - printenv > ./furbaby/.env
@@ -38,7 +36,7 @@ jobs:
         region: "us-east-1"
         app: "project-team-1-furbaby"
         env: "staging"
-        bucket: "elasticbeanstalk-us-east-1-994011800090"
+        bucket: $AWS_BUCKET_NAME
         on:
           branch: develop
 
@@ -48,7 +46,7 @@ jobs:
         region: "us-east-1"
         app: "project-team-1-furbaby"
         env: "production"
-        bucket: "elasticbeanstalk-us-east-1-994011800090"
+        bucket: $AWS_BUCKET_NAME
         skip_cleanup: true
         on:
           branch: master
