--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "axios": "1.5.1",
+    "date-fns": "^2.30.0",
     "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
