--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ jobs:
       - black --check .
       - pylint **/*.py --exit-zero
       - coverage run --source=api manage.py test --keepdb
+      - coverage report
 
     after_script:
       - export CI_NAME=travis-ci
@@ -31,7 +32,7 @@ jobs:
       - export CI_BUILD_URL=$TRAVIS_BUILD_WEB_URL
       - export CI_BRANCH=$TRAVIS_PULL_REQUEST_BRANCH
       - export CI_PULL_REQUEST=$TRAVIS_PULL_REQUEST
-      - coveralls
+      - curl -sL https://coveralls.io/coveralls-linux.tar.gz | tar -xz && ./coveralls
 
     deploy:
       - provider: elasticbeanstalk
