--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "@types/node": "16.18.58",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
+    "axios": "1.5.1",
+    "date-fns": "2.30.0",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
@@ -48,6 +51,32 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@tailwindcss/forms": "0.5.6",
+    "@tailwindcss/typography": "0.5.10",
+    "@types/lodash": "4.14.200",
+    "@types/react-helmet": "6.1.7",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "daisyui": "3.9.4",
+    "eslint": "8.8.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.0.2",
+    "prettier": "3.0.3",
+    "tailwindcss": "3.3.3"
+  },
+  "lint-staged": {
+    "*.{js, ts, tsx}": [
+      "prettier --write . --config ./.prettierrc.json",
+      "eslint --fix src/**/*.{ts,tsx}"
     ]
   }
 }
